2008-09-09  Masami Hiramatsu  <mhiramat@redhat.com>

	* stapprobes.5.in : Added a line for $name context variable.
	* translate.cxx (c_unparser::emit_common_header): Add marker_name and
	marker_format fields to context.
	* tapsets.cxx (common_probe_entryfn_prologue) : Ditto.
	(mark_derived_probe_group::emit_module_decls) : Ditto.
	(mark_var_expanding_copy_visitor) : change visit_target_symbol_format
	to visit_target_symbol_context.
	(mark_var_expanding_copy_visitor::visit_target_symbol_context): handle
	not only $format but also $name.
	(mark_var_expanding_copy_visitor::visit_target_symbol): Ditto.

2008-09-07  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (build_blacklist): Add some x86 raw port-io spots.

2008-09-06  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (utrace_derived_probe ctor): Handle
	process.* probe point reverse engineering (pid- and path-less).

2008-09-05  Stan Cox  <scox@redhat.com>

	* elaborate.cxx (add_global_var_display): Handle scalar statistics.

2008-09-05  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac, Makefile.am, systemtap.spec: Don't look for libcap.
	* configure, Makefile.in: Regenerated.

2008-09-05  Wenji Huang  <wenji.huang@oracle.com>

	PR 6731.
	* main.cxx (usage,main,printscript): Improve listing mode with "-L".
	* stap.1.in, stapex.5.in: Document it.

2008-09-04  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (usage): Remove some dwarfless items.

2008-09-02  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (uprobe..emit_module_init): Leave dying-uprobe
	loop as early as possible.

2008-09-02  Stan Cox  <scox@redhat.com>

	* elaborate.cxx (add_global_var_display): Simplify token use.

2008-09-02  Frank Ch. Eigler  <fche@elastic.org>

	PR4225.
	* tapsets.cxx (generated stap_uprobe_change): Fix major thinko that
	falsely triggered a slew of uprobe_unregister's for each plain
	register.
	(uprobe_derived_probe_group::emit_module_init): Add code to generate