@@ -421,8 +421,13 @@ probe gets called when a thread described by PID or PATH dies.
 A
 .B .syscall
 probe gets called when a thread described by PID or PATH makes a
-system call.  The system call number is available in the "$syscall"
-context variable.
+system call.  The system call number is available in the
+.BR $syscall
+context variable, and the first 6 arguments of the system call
+are available in the
+.BR $argN
+(ex. $arg1, $arg2, ...) context variable.
+
 A
 .B .syscall.return
 probe gets called when a thread described by PID or PATH returns from a
